--- a/bloco_3/dia_1/1as_tags.html
+++ b/bloco_3/dia_1/1as_tags.html
@@ -8,9 +8,14 @@
     <h1>Exercícios</h1>
     <h2>Amigos que fiz na Trybe:</h2>
     <ul>
-      <li>Uriel</li>
+      <li><a href="#uriel">Uriel</a></li>
     </ul>
+    <a href="https://www.google.com/" target="">Gugou</a><br>
     <img src="https://i.pinimg.com/originals/cd/91/75/cd91753b4f163b1d545dc408572b6f21.jpg" width="500px">
     <img src="xablau.jpg">
+    <p id="uriel">Uriel mt top top top top top top top top top top top top top top top top top top top top<br>
+      top top top top top top top top top top top top top top top top top top top top top top top<br>
+      top top top top top top top top top top top top top top top top top top top top top top top</p>
+    
   </body>
 </html>
