--- a/bloco_3/dia_2/1os_css.html
+++ b/bloco_3/dia_2/1os_css.html
@@ -7,12 +7,33 @@
         h1{
             width: 65px;
             color: orange;
+            font-family: sans-serif;
+            text-decoration:underline;
         }
         ul{
             background-color: palevioletred;
+            font-style: oblique;
+            line-height: 2em;
+            text-align: center;
         }
         .tagpu{
             background-color: powderblue;
+        }
+        p{
+            font-weight: 600;
+            font-size: 3em;
+        }
+        body{
+            font-size: 16px;
+        }
+        #yellow{
+            background-color: yellow;
+        }
+        #red{
+            background-color: red;
+        }
+        #brown{
+            background-color: brown;
         }
     </style>
   </head>
@@ -20,16 +41,9 @@
     <h1>Exercícios 3.2</h1>
     <p class="tagpu">Qual é a sua cor favorita?</p>
     <ul class="tagpu">
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+      <li id="yellow">Amarelo</li>
+      <li id="red">Vermelho</li>
+      <li id="brown">Marrom</li>
     </ul>
-
-    <!-- Exercícios
- - Modifique o tamanho do h1 para 65 pixels
- - Modifique a cor do texto do h1 para laranja
- - Modifique a cor de fundo da lista não ordenada
- - Crie uma classe para modificar a cor de fundo da tag p e da ul ao mesmo tempo
-    -->
   </body>
 </html>
