a fonte dos itens mudam quando clica

--- a/bloco_3/dia_3/index.html
+++ b/bloco_3/dia_3/index.html
@@ -10,7 +10,7 @@
     <p>Top 3 dos melhores sites que existem na web</p>
     <ol>
         <li>Le Livros</li>
-        <li>Pinteres</li>
+        <li>Pinterest</li>
         <li>Reddit</li>
     </ol>
     <!-- EXERCÍCIOS
