adiciona lista de motivos

--- a/bloco_3/dia_3/index.html
+++ b/bloco_3/dia_3/index.html
@@ -28,5 +28,10 @@
  No 'style.css', adicione a propriedade 'list-style: none' para ambas as listas.
 
     -->
+    <ul>
+        <li>Livros gratuitos</li>
+        <li>Belas imagens</li>
+        <li>Vídeos engraçados</li>
+    </ul>
   </body>
 </html>
