--- a/bloco_3/dia_3/index.html
+++ b/bloco_3/dia_3/index.html
@@ -1,37 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="UTF-8">
-    <title>Agrupando Seletores</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Pseudoclasses</title>
+  <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Lista dos Melhores Sites que já vi</h1>
-    <p>Top 3 dos melhores sites que existem na web</p>
-    <ol>
-        <li>Le Livros</li>
-        <li>Pinterest</li>
-        <li>Reddit</li>
-    </ol>
+    <h1>Paleta de Cores</h1>
+    <p>Vamos criar uma paleta de cores com as divs abaixo:</p>
+    <div>
+      <h3>Cor primária</h3>
+    </div>
+    <div>
+      <h3>Cor Secundária</h3>
+    </div>
+    <div>
+      <h3>Cor Complementar</h3>
+    </div>
+    <div>
+      <h3>Cor Escura</h3>
+    </div>
+    <div>
+      <h3>Cor Clara</h3>
+    </div>
     <!-- EXERCÍCIOS
- Adicione uma lista ordenada dos 3 melhores sites que você conhece.
- Crie um arquivo no mesmo diretório e nomeie-o de 'style.css'.
- Nesse arquivo .css, adicione os estilos para que:
-1 O texto das tags 'h1' e 'p' estejam centralizados.
-2 A cor de fundo da sua lista mude quando o cursor estiver sobre o item.
-3 A fonte do item mude quando ele for clicado.
+ Estilize as divs para que, ao passar o cursor por cima das mesmas, elas
+      ganhem uma borda.
+ Faça cada div ter uma cor própria.
+ Estilize cada uma das tags <h3>.
+ Faça a terceira div ser maior que as demais.
+ Deixe as tags ímpares <h3> com o texto em itálico.
 
     -->
-    <p>Principais motivos para eu gostar deles</p>
-    <!-- EXERCÍCIOS
- Adicione uma lista não ordenada com, pelo menos, 3 características que você gosta.
- No 'style.css', adicione a propriedade 'list-style: none' para ambas as listas.
-
-    -->
-    <ul>
-        <li>Livros gratuitos</li>
-        <li>Belas imagens</li>
-        <li>Vídeos engraçados</li>
-    </ul>
   </body>
 </html>
