--- a/bloco_3/dia_3/index.html
+++ b/bloco_3/dia_3/index.html
@@ -17,12 +17,12 @@
       <li><em>Às vezes, o melhor que podemos fazer é começar novamente.</em> - Steve Rogers (Capitão América)</li>
     </ol>
     <h3>As maiores linguagens de programação:</h3>
-    <ul>
-      <li>Python</li>
-      <li>Java</li>
-      <li>JavaScript</li>
-      <li>C#</li>
-      <li>C / C++</li>
+    <ul class="prog">
+      <li value="python">Python</li>
+      <li value="java">Java</li>
+      <li value="javascript">JavaScript</li>
+      <li value="c#">C#</li>
+      <li value="c / c++">C / C++</li>
     </ul>
     <h3>Maiores aliados de uma pessoa desenvolvedora:</h3>
     <ul>
