--- a/bloco_3/dia_3/index.html
+++ b/bloco_3/dia_3/index.html
@@ -25,7 +25,7 @@
       <li value="c / c++">C / C++</li>
     </ul>
     <h3>Maiores aliados de uma pessoa desenvolvedora:</h3>
-    <ul>
+    <ul class="aliados">
       <li>
         <a href="https://pt.stackoverflow.com/">StackOverflow</a>
       </li>
