--- a/bloco_3/dia_4/index.html
+++ b/bloco_3/dia_4/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <!--insira os elementos aqui-->
+    <header>
+        <h1>Soco a 80km/hm: Conheça o Stomatopoda</h1>
+    </header>
   </body>
 </html>
