inicio do primeiro artigo

--- a/bloco_3/dia_4/index.html
+++ b/bloco_3/dia_4/index.html
@@ -18,5 +18,20 @@
             <li><a href="">Contato</a></li>
         </ul>
     </nav>
+    <article>
+        <h2>Fatos sobre o Stomatopoda</h2>
+        <section class="general_info">
+            <h3>Informações gerais</h3>
+            <p>texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto </p>
+        </section>
+        <section class="info_2">
+            <h3>Fato interessante0</h3>
+            <p>texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto </p>
+        </section>
+        <section class="info_3">
+            <h3>Fato interessante0</h3>
+            <p>texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto </p>
+        </section>
+    </article>
   </body>
 </html>
