adicionado link para o video

--- a/bloco_3/dia_4/index.html
+++ b/bloco_3/dia_4/index.html
@@ -18,7 +18,7 @@
             <li><a href="">Contato</a></li>
         </ul>
     </nav>
-    <article>
+    <article class="infos">
         <h2>Fatos sobre o Stomatopoda</h2>
         <section class="general_info">
             <h3>Informações gerais</h3>
@@ -26,12 +26,18 @@
         </section>
         <section class="info_2">
             <h3>Fato interessante0</h3>
+            <h4>Subsub</h4>
             <p>texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto </p>
         </section>
         <section class="info_3">
             <h3>Fato interessante0</h3>
+            <h4>Subsub</h4>
             <p>texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto </p>
         </section>
+    </article>
+    <article>
+        <h2>Aprecie o Rocky Balboa dos mares em ação:</h2>
+        <p><a href="https://www.youtube.com/watch?v=E0Li1k5hGBE" target="_blank">CLIQUE AQUI PARA O SHOW</a></p>
     </article>
   </body>
 </html>
