--- a/bloco_3/dia_4/index.html
+++ b/bloco_3/dia_4/index.html
@@ -9,7 +9,7 @@
   <body>
     <!--insira os elementos aqui-->
     <header>
-        <h1>Soco a 80km/hm: Conheça o Stomatopoda</h1>
+        <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
     </header>
     <nav>
         <ul>
