--- a/bloco_3/dia_4/index.html
+++ b/bloco_3/dia_4/index.html
@@ -39,5 +39,8 @@
         <h2>Aprecie o Rocky Balboa dos mares em ação:</h2>
         <p><a href="https://www.youtube.com/watch?v=E0Li1k5hGBE" target="_blank">CLIQUE AQUI PARA O SHOW</a></p>
     </article>
+    <footer>
+        <p>Conteúdo compilado por Nalu Pantoja, 2021</p>
+    </footer>
   </body>
 </html>
