estilizando titulo e centralizando links

--- a/bloco_3/dia_4/index.html
+++ b/bloco_3/dia_4/index.html
@@ -12,7 +12,7 @@
         <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
     </header>
     <nav>
-        <ul>
+        <ul class="links">
             <li><a href="">Página Inicial</a></li>
             <li><a href="">Sobre</a></li>
             <li><a href="">Contato</a></li>
@@ -25,12 +25,12 @@
             <p>texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto </p>
         </section>
         <section class="info_2">
-            <h3>Fato interessante0</h3>
+            <h3>Fato interessante</h3>
             <h4>Subsub</h4>
             <p>texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto </p>
         </section>
         <section class="info_3">
-            <h3>Fato interessante0</h3>
+            <h3>Fato interessante</h3>
             <h4>Subsub</h4>
             <p>texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto </p>
         </section>
