estilizando titulo na imagem

--- a/bloco_3/dia_4/index.html
+++ b/bloco_3/dia_4/index.html
@@ -9,8 +9,13 @@
   <body>
     <!--insira os elementos aqui-->
     <header>
-        <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
+        
+        <img class="cover" src="https://mega.ibxk.com.br///2013/4/megacurioso/super-imagem/superimagem-megacurioso-36141004656419.jpg?ims=1200x480">
     </header>
+    <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
+    <aside>
+        <p>teste p ver onde ta</p>
+    </aside>
     <nav>
         <ul class="links">
             <li><a href="">Página Inicial</a></li>
