--- a/exercises/exercises/javascript-dom-eventos/ex5-2.html
+++ b/exercises/exercises/javascript-dom-eventos/ex5-2.html
@@ -58,7 +58,10 @@
   <body>
     <script>
       // COLOQUE SEU CÓDIGO AQUI
-      
+    //ex 1
+    let title = document.createElement('h1');
+    title.innerHTML = 'Exercício 5.2 - JavaScript DOM';
+    document.body.appendChild(title);
     </script>
   </body>
 </html>
