--- a/exercises/exercises/javascript-dom-eventos/ex5-2.html
+++ b/exercises/exercises/javascript-dom-eventos/ex5-2.html
@@ -62,6 +62,11 @@
     let title = document.createElement('h1');
     title.innerHTML = 'Exercício 5.2 - JavaScript DOM';
     document.body.appendChild(title);
+
+    //ex 2
+    let content = document.createElement('div');
+    content.className = 'main-content';
+    document.body.appendChild(content);
     </script>
   </body>
 </html>
