--- a/exercises/exercises/javascript-dom-eventos/ex5-2.html
+++ b/exercises/exercises/javascript-dom-eventos/ex5-2.html
@@ -64,9 +64,14 @@
     document.body.appendChild(title);
 
     //ex 2
-    let content = document.createElement('div');
-    content.className = 'main-content';
-    document.body.appendChild(content);
+    let main_content = document.createElement('div');
+    main_content.className = 'main-content';
+    document.body.appendChild(main_content);
+
+    //ex 3
+    let center_content = document.createElement('div');
+    center_content.className = 'center-content';
+    document.main_content.appendChild(center_content);
     </script>
   </body>
 </html>
