--- a/exercises/exercises/javascript-dom-eventos/ex5-2.html
+++ b/exercises/exercises/javascript-dom-eventos/ex5-2.html
@@ -77,6 +77,11 @@
     const paragraph = document.createElement('p');
     paragraph.innerHTML = 'Teste testinho testão';
     document.center_content.appendChild(paragraph);
+
+    //ex 5
+    const left_content = document.createElement('div');
+    left_content.className = 'left-content';
+    document.main_content.appendChild(left_content);
     </script>
   </body>
 </html>
