--- a/exercises/exercises/javascript-dom-eventos/ex5-2.html
+++ b/exercises/exercises/javascript-dom-eventos/ex5-2.html
@@ -82,6 +82,11 @@
     const left_content = document.createElement('div');
     left_content.className = 'left-content';
     document.main_content.appendChild(left_content);
+
+    //ex 6
+    const right_content = document.createElement('div');
+    right_content.className = 'right-content';
+    document.main_content.appendChild(right_content);
     </script>
   </body>
 </html>
