--- a/exercises/exercises/javascript-dom-eventos/ex5-2.html
+++ b/exercises/exercises/javascript-dom-eventos/ex5-2.html
@@ -103,6 +103,14 @@
       listNum.innerHTML = numbers[num];
       list.appendChild(listNum);
     }
+
+    //ex 9
+    const h3_1 = document.createElement('h3');
+    main_content.appendChild(h3_1);
+    const h3_2 = document.createElement('h3');
+    main_content.appendChild(h3_2);
+    const h3_3 = document.createElement('h3');
+    main_content.appendChild(h3_3);
     </script>
   </body>
 </html>
