--- a/exercises/exercises/javascript-dom-eventos/ex5-2.html
+++ b/exercises/exercises/javascript-dom-eventos/ex5-2.html
@@ -111,6 +111,9 @@
     main_content.appendChild(h3_2);
     const h3_3 = document.createElement('h3');
     main_content.appendChild(h3_3);
+
+    //2a parte
+    //ex 1
     </script>
   </body>
 </html>
