--- a/exercises/exercises/javascript-dom-eventos/ex5-2.html
+++ b/exercises/exercises/javascript-dom-eventos/ex5-2.html
@@ -120,6 +120,9 @@
     for (let index = 0; index < 3; index += 1) {
       h3.className = 'description'
     }
+
+    //ex 3
+    main_content.removeChild(left_content);
     </script>
   </body>
 </html>
