--- a/exercises/exercises/javascript-dom-eventos/ex5-2.html
+++ b/exercises/exercises/javascript-dom-eventos/ex5-2.html
@@ -128,6 +128,10 @@
     //ex 4
     const divRightContent = document.getElementsByClassName('right_content')[0];
     divRightContent.style.marginRight = 'auto';
+
+    //ex 5
+    const divCenterContent = document.getElementsByClassName('center-content')[0];
+    divCenterContent.parentNode.style.backgroundColor = 'green';
     </script>
   </body>
 </html>
