Finalmente tudo certo

--- a/exercises/exercises/javascript-dom-eventos/ex5-2.html
+++ b/exercises/exercises/javascript-dom-eventos/ex5-2.html
@@ -127,7 +127,7 @@
     main_content.removeChild(divLeftContent);
 
     //ex 4
-    const divRightContent = document.getElementsByClassName('right_content')[0];
+    const divRightContent = document.getElementsByClassName('right-content')[0];
     divRightContent.style.marginRight = 'auto';
 
     //ex 5
