--- a/exercises/flexbox-responsivo-html-css/index.html
+++ b/exercises/flexbox-responsivo-html-css/index.html
@@ -13,6 +13,9 @@
     <fieldset>
       <label for="input-nome">Nome:
         <input type="text" required maxlength="40" id="input-nome">
+      </label> <br><br>
+      <label for="">E-mail:
+        <input type="text" required maxlength="50">
       </label>
     </fieldset>
   </form>
