--- a/exercises/flexbox-responsivo-html-css/index.html
+++ b/exercises/flexbox-responsivo-html-css/index.html
@@ -14,8 +14,11 @@
       <label for="input-nome">Nome:
         <input type="text" required maxlength="40" id="input-nome">
       </label> <br><br>
-      <label for="">E-mail:
-        <input type="text" required maxlength="50">
+      <label for="input-email">E-mail:
+        <input type="text" required maxlength="50" id="input-email">
+      </label> <br><br>
+      <label for="input-cpf">CPF:
+        <input type="text" required maxlength="11" id="input-cpf">
       </label>
     </fieldset>
   </form>
