--- a/exercises/flexbox-responsivo-html-css/index.html
+++ b/exercises/flexbox-responsivo-html-css/index.html
@@ -19,6 +19,9 @@
       </label> <br><br>
       <label for="input-cpf">CPF:
         <input type="text" required maxlength="11" id="input-cpf">
+      </label> <br><br>
+      <label for="input-endereco">Endereço:
+        <input type="text" required maxlength="200" id="input-enderco">
       </label>
     </fieldset>
   </form>
