--- a/exercises/flexbox-responsivo-html-css/index.html
+++ b/exercises/flexbox-responsivo-html-css/index.html
@@ -22,6 +22,9 @@
       </label> <br><br>
       <label for="input-endereco">Endereço:
         <input type="text" required maxlength="200" id="input-enderco">
+      </label> <br><br>
+      <label for="input-cidade">Cidade:
+        <input type="text" required maxlength="28" id="input-cidade">
       </label>
     </fieldset>
   </form>
