--- a/exercises/flexbox-responsivo-html-css/index.html
+++ b/exercises/flexbox-responsivo-html-css/index.html
@@ -25,8 +25,18 @@
       </label> <br><br>
       <label for="input-cidade">Cidade:
         <input type="text" required maxlength="28" id="input-cidade">
+      </label> <br><br>
+      <label for="select-estado">Estado:
+        <select required id="select-estado" value= ""></select>
+      </label><br><br>
+      <label for="input-casa">Tipo:
+        <input type="radio" id="input-casa" name="tipo" required> Casa
+      </label>
+      <label for="ap">
+        <input type="radio" id="ap" name="tipo"> Apartamento
       </label>
     </fieldset>
   </form>
+  <script src="script.js"></script>
 </body>
 </html>
