--- a/exercises/flexbox-responsivo-html-css/index.html
+++ b/exercises/flexbox-responsivo-html-css/index.html
@@ -39,7 +39,10 @@
     </fieldset>
     <fieldset>
       <label for="resumo-curriculo">Resumo do currículo:<br>
-        <textarea id="resumo-curriculo" cols="30" rows="10" maxlength="1000" style="max-width: 350px; max-height: 250px;"></textarea>
+        <textarea id="resumo-curriculo" cols="30" rows="10" maxlength="1000" required style="max-width: 350px; max-height: 250px;"></textarea>
+      </label><br><br>
+      <label>Cargo:
+        <input type="text" required maxlength="40">
       </label>
     </fieldset>
   </form>
