--- a/exercises/flexbox-responsivo-html-css/index.html
+++ b/exercises/flexbox-responsivo-html-css/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forms</title>
-    <link type="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="node_modules/bulma/css/bulma.min.css">
+    <link rel="stylesheet" href="dist/css/DatePickerX.min.css">
+<script src="dist/js/DatePickerX.min.js"></script>
 </head>
 <body>
     <h1>Forms</h1>
@@ -36,8 +39,9 @@
       <label for="ap">
         <input type="radio" id="ap" name="tipo" required> Apartamento
       </label>
-    </fieldset>
+    </fieldset><br>
     <fieldset>
+      <h2>Currículo</h2>
       <label for="resumo-curriculo">Resumo do currículo:<br>
         <textarea id="resumo-curriculo" cols="30" rows="10" maxlength="1000" required style="max-width: 350px; max-height: 250px;"></textarea>
       </label><br><br>
@@ -46,6 +50,9 @@
       </label><br><br>
       <label for="desc-cargo">Descrição do cargo:
         <input type="text" id="desc-cargo" required maxlength="500">
+      </label><br><br>
+      <label>Data de início:
+        <input type="text" id="input-data" required>
       </label>
     </fieldset>
   </form>
